--- a/Client/client_app/templates/client_app/users_list.html
+++ b/Client/client_app/templates/client_app/users_list.html
@@ -22,6 +22,17 @@
             box-shadow: 0 15px 40px rgba(0,0,0,0.08);
             padding: 30px;
         }
+        .users-header {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            margin-bottom: 25px;
+        }
+
+        .users-header h1 {
+            font-size: 1.8rem;
+            font-weight: 700;
+        }
         </style>
 </head>
 <body>
