--- a/Client/client_app/templates/client_app/login.html
+++ b/Client/client_app/templates/client_app/login.html
@@ -46,7 +46,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Library System Application Platform</title>
+    <title>Librarian Login | Book System</title>
     <link rel="stylesheet" href="{% static 'css/login.css' %}">
 </head>
 <body style="background: url('{{ MEDIA_URL }}{{ bg_image }}') center/cover no-repeat fixed;">
