add clients on dashboard

--- a/Client/client_app/templates/client_app/dashboard.html
+++ b/Client/client_app/templates/client_app/dashboard.html
@@ -205,6 +205,9 @@
             <a href="{% url 'users_list' %}" class="sidebar-link">
                 📖 Users
             </a>
+            <a href="{% url 'clients_list' %}" class="sidebar-link">
+                👥 Clients
+            </a>
             
             <!-- <a href="#" class="sidebar-link">
                 {% comment %}  Returns {% endcomment %}
